tests/NormalTests/paczka1/small_fuzzy/42159484.err
Error in line 1: UBre S330 93,4
Error in line 12: A701 A170 9,0
